tests/parse_print/parsing05/stderr.expected
Error: tests/parse_print/parsing05/parsing05.essence:3:1:
  |
3 | <empty line>
  | ^
Missing )
